--- a/Coliseum/nbproject/private/private.properties
+++ b/Coliseum/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Sebas\\AppData\\Roaming\\NetBeans\\15\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\Alfonso\\Downloads\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\Alfonso\\AppData\\Roaming\\NetBeans\\18\\build.properties
