--- a/Coliseum/nbproject/project.properties
+++ b/Coliseum/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Coliseum
-main.class=Canchas.CanchaBasket
+main.class=Vista.LoginFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
